apps/kemuri/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kemuri
  namespace: kemuri
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - kemuri.talos.froystein.jp
  rules:
    - backendRefs:
        - name: kemuri
          port: 80
